Fix overflowing sponsors section

--- a/css/sponsors.css
+++ b/css/sponsors.css
@@ -35,8 +35,8 @@
 
 @media screen and (min-width: 900px) {
   .sponsors-section__newspaper {
-    margin-left: -32rem;
-    margin-right: -32rem;
+    margin-left: -24rem;
+    margin-right: -24rem;
     padding: 32rem;
   }
 
